# tasc_science

./: Augur Drill Code (Linear Actuator+Motor) V1.txt  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/science_bringup/share/ament_index/resource_index/package_run_dependencies/: science_bringup
install/science_bringup/share/ament_index/resource_index/parent_prefix_path/: science_bringup
install/science_bringup/share/science_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/science_bringup/share/science_bringup/cmake/: science_bringupConfig-version.cmake  science_bringupConfig.cmake
install/science_bringup/share/science_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/science_bringup/share/science_bringup/launch/: bringup.launch.py
install/science_control/include/science_control/: science_2026_system.hpp
install/science_control/lib/science_control/: keyboard_teleop  science_2026_keyboard_teleop
install/science_control/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: science_control
install/science_control/share/ament_index/resource_index/package_run_dependencies/: science_control
install/science_control/share/ament_index/resource_index/parent_prefix_path/: science_control
install/science_control/share/science_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin.xml
install/science_control/share/science_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_science_controlExport-noconfig.cmake  export_science_controlExport.cmake  science_controlConfig-version.cmake  science_controlConfig.cmake
install/science_control/share/science_control/config/: controllers.yaml
install/science_control/share/science_control/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/science_description/share/ament_index/resource_index/package_run_dependencies/: science_description
install/science_description/share/ament_index/resource_index/parent_prefix_path/: science_description
install/science_description/share/science_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/science_description/share/science_description/cmake/: science_descriptionConfig-version.cmake  science_descriptionConfig.cmake
install/science_description/share/science_description/environment/: ament_prefix_path.dsv  path.dsv
install/science_description/share/science_description/urdf/: science_2026.urdf.xacro
log/: latest_build
src/esp32/: science_auger.ino
src/science_bringup/: CMakeLists.txt  package.xml
src/science_bringup/launch/: bringup.launch.py  sci_backend.launch.py  sci_frontend.launch.py
src/science_control/: CMakeLists.txt  package.xml  plugin.xml
src/science_control/config/: controllers.yaml
src/science_control/include/science_control/: science_2026_system.hpp
src/science_control/src/: science_2026_system.cpp
src/science_control/teleop/: science_2026_keyboard_teleop.cpp
src/science_description/: CMakeLists.txt  package.xml
src/science_description/urdf/: science_2026.urdf.xacro
