<?xml version="1.0"?>
<package format="3">
  <name>science_bringup</name>
  <version>0.0.0</version>

  <description>Launch files for the SCIENCE 2026 robot.</description>

  <maintainer email="ridaefatima700@example.com">
    Rida-E Fatima and Ibrahim Ali
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>science_control</exec_depend>
  <exec_depend>science_description</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
