<?xml version="1.0"?>
<package format="3">
  <name>science_description</name>
  <version>0.0.0</version>

  <description>Robot description for the SCIENCE 2026 robotic arm.</description>

  <maintainer email="imlazy@example.com">
    Rida-E Fatima and Ibrahim Ali
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>science_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
